# code-quality-bot

./: .env.example  .gitignore  JOURNAL.md  README.en.md  README.md  docker-compose.yml
deploy/: .env.example  README.md  config.yaml  config.yaml.example  docker-compose.yml  pr_agent.gitlab.toml  pr_agent.gitlab.toml.example
deploy/engine-integration/: Dockerfile  NOTICE  VALIDATION.md
deploy/engine-integration/cqb_patch/: __init__.py  bootstrap.py  context_patch.py  repo_graph.py  verify_patch.py
deploy/engine-integration/tests/: conftest.py  review_engine_test_fixtures.py  test_context_patch.py  test_repo_graph.py  test_verify_patch.py
docs/: deploy-macmini.md  diffblue.md  gitlab-ce.md  gitlab-webhook-setup.md  litellm-minimax.md  pr-agent.md  qodo-cover.md  review-engine-phase1-plan.md  review-engine-phase3-plan.md  review-engine-plan.md
eval/: REPORT.md  rubric.md
litellm/: config.yaml
pr-agent/: .pr_agent.gitlab.toml  .pr_agent.local.toml  .pr_agent.toml
review-engine/: README.md  pyproject.toml
review-engine/eval/: SENIOR_COMPARE.md  run_ab.py
review-engine/review_engine/: __init__.py  cli.py  context.py  graph.py  llm.py  models.py  prompt.py  review.py
review-engine/tests/: conftest.py  test_cli.py  test_context.py  test_graph.py  test_models.py  test_prompt.py  test_review.py
runners/: run-diffblue.sh  run-pr-agent.sh  run-qodo-cover.sh
samples/cover-sample-py/: calculator.py  cover_agent_unit_test_runs.db
scripts/: seed-gitlab.sh  setup.sh
